datasette/static/app.css
/* ... */
label.sort_by_desc {
    padding-right: 1em;
}
pre#sql-query {
    margin-bottom: 1em;
}

.core label,
label.core {
    font-weight: bold;
    display: inline-block;
}

.core input[type=text],
input.core[type=text],
.core input[type=search],
input.core[type=search] {
    border: 1px solid #ccc;
    border-radius: 3px;
    width: 60%;
    padding: 9px 4px;
    display: inline-block;
    font-size: 1em;
    font-family: Helvetica, sans-serif;
}
.core input[type=search],
input.core[type=search] {
    /* Stop Webkit from styling search boxes in an inconsistent way */
    /* https://css-tricks.com/webkit-html5-search-inputs/ comments */
    -webkit-appearance: textfield;
}
.core input[type="search"]::-webkit-search-decoration,
input.core[type="search"]::-webkit-search-decoration,
.core input[type="search"]::-webkit-search-cancel-button,
input.core[type="search"]::-webkit-search-cancel-button,
.core input[type="search"]::-webkit-search-results-button,
input.core[type="search"]::-webkit-search-results-button,
.core input[type="search"]::-webkit-search-results-decoration,
input.core[type="search"]::-webkit-search-results-decoration {
    display: none;
}

.core input[type=submit],
.core button[type=button],
input.core[type=submit],
button.core[type=button] {
    font-weight: 400;
    cursor: pointer;
    text-align: center;
    vertical-align: middle;
    border-width: 1px;
    border-style: solid;
    padding: .5em 0.8em;
    font-size: 0.9rem;
    line-height: 1;
    border-radius: .25rem;
}

.core input[type=submit],
input.core[type=submit] {
    color: #fff;
    background: linear-gradient(180deg, #007bff 0%, #4E79C7 100%);
    border-color: #007bff;
    -webkit-appearance: button;
}

.core button[type=button],
button.core[type=button] {
    color: #007bff;
    background-color: #fff;
    border-color: #007bff;
}

.filter-row {
    margin-bottom: 0.6em;
}
.search-row {
    margin-bottom: 1.8em;
}

.search-row label {
    font-size: 1.2em;
    padding-right: 0.5em;
    display: inline-block;
    width: 80px;
}

.select-wrapper {
    border: 1px solid #ccc;
    width: 120px;
    border-radius: 3px;
    padding: 0;
    background-color: #fafafa;
    position: relative;
    display: inline-block;
    margin-right: 0.3em;
}
.select-wrapper:focus-within {
    border: 1px solid black;
}
.select-wrapper.filter-op {
    width: 80px;
}
.select-wrapper::after {
    content: "\25BE";
    position: absolute;
    top: 0px;
    right: 0.4em;
    color: #bbb;
    pointer-events: none;
    font-size: 1.2em;
    padding-top: 0.16em;
}

.select-wrapper select {
    padding: 9px 8px;
    width: 100%;
    border: none;
    box-shadow: none;
    background: transparent;
    background-image: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    cursor: pointer;
}
.select-wrapper select {
    font-size: 1em;
    font-family: Helvetica, sans-serif;
}
.select-wrapper option {
    font-size: 1em;
    font-family: Helvetica, sans-serif;
}

.select-wrapper select:focus {
    outline: none;
}
.filters {
    font-size: 0.8em;
}
.filters input.filter-value {
    width: 200px;
    border-radius: 3px;
    -webkit-appearance: none;
    padding: 9px 4px;
    font-size: 1em;
    font-family: Helvetica, sans-serif;
}




.facet-results {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}
.facet-info {
    width: 250px;
    margin-right: 15px;
}
.facet-info-total {
    font-size: 0.8em;
    color: #666;
    padding-right: 0.25em;
}
.facet-info li,
.facet-info ul {
    margin: 0;
    padding: 0;
}
.facet-info ul {
    padding-left: 1.25em;
    margin-bottom: 1em;
}
.facet-info a.cross:link,
.facet-info a.cross:visited,
.facet-info a.cross:hover,
.facet-info a.cross:focus,
.facet-info a.cross:active {
    text-decoration: none;
}
ul li.facet-truncated {
    list-style-type: none;
    position: relative;
    top: -0.35em;
    text-indent: 0.85em;
}

.advanced-export {
    margin-top: 1em;
    padding: 0.01em 2em 0.01em 1em;
    width: auto;
    display: inline-block;
    box-shadow: 1px 2px 8px 2px rgba(0,0,0,0.08);
	background-color: white;
}

.download-sqlite em {
    font-style: normal;
    font-size: 0.8em;
}



p.zero-results {
    border: 2px solid #ccc;
    background-color: #eee;
    padding: 0.5em;
    font-style: italic;
}

/* Value types */
.type-float, .type-int {
    color: #666;
}






/* Overrides ===============================================================*/

.small-screen-only,
.select-wrapper.small-screen-only {
    display: none;
}
@media only screen and (max-width: 576px) {

    .small-screen-only {
        display: initial;
    }
    .select-wrapper.small-screen-only {
        display: inline-block;
    }

    form.sql textarea {
        width: 95%;
    }
    /* Force table to not be like tables anymore */
    table.rows-and-columns,
    .rows-and-columns thead,
    .rows-and-columns tbody,
    .rows-and-columns th,
    .rows-and-columns td,
    .rows-and-columns tr {
        display: block;
    }

    /* Hide table headers (but not display: none;, for accessibility) */
    .rows-and-columns thead tr {
        position: absolute;
        top: -9999px;
        left: -9999px;
    }

    table.rows-and-columns tr {
        border: 1px solid #ccc;
        margin-bottom: 1em;
        border-radius: 10px;
        background-color: white;
        padding: 0.2rem;
    }

    table.rows-and-columns td {
        /* Behave  like a "row" */
        border: none;
        border-bottom: 1px solid #eee;
        padding: 0;
        padding-left: 10%;
    }

    table.rows-and-columns td:before {
        display: block;
        color: black;
        margin-left: -10%;
        font-size: 0.8em;
    }

    .select-wrapper {
        width: 100px;
    }
    .select-wrapper.filter-op {
        width: 60px;
    }
    .filters input.filter-value {
        width: 140px;
    }
}
/* ... */

